# wxWidgetsTemplate

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/headers/: app_data.h.in
src/: gui.cpp  gui.h  main.cpp
